test/libsolidity/syntaxTests/types/cyclic_dependency_check_on_consts_exhausted.sol
contract A {}
contract Main {
    A const B = C;
    A const C = D;
    A const D = E;
    A const E = F;
    A const F = G;
    A const G = H;
    A const H = I;
    A const I = J;
    A const J = K;
    A const K = L;
    A const L = M;
    A const M = N;
    A const N = O;
    A const O = P;
    A const P = Q;
    A const Q = R;
    A const R = S;
    A const S = T;
    A const T = U;
    A const U = V;
    A const V = W;
    A const W = X;
    A const X = Y;
    A const Y = Z;
    A const Z = BA;
    A const BA = BB;
    A const BB = BC;
    A const BC = BD;
    A const BD = BE;
    A const BE = BF;
    A const BF = BG;
    A const BG = BH;
    A const BH = BI;
    A const BI = BJ;
    A const BJ = BK;
    A const BK = BL;
    A const BL = BM;
    A const BM = BN;
    A const BN = BO;
    A const BO = BP;
    A const BP = BQ;
    A const BQ = BR;
    A const BR = BS;
    A const BS = BT;
    A const BT = BU;
    A const BU = BV;
    A const BV = BW;
    A const BW = BX;
    A const BX = BY;
    A const BY = BZ;
    A const BZ = CA;
    A const CA = CB;
    A const CB = CC;
    A const CC = CD;
    A const CD = CE;
    A const CE = CF;
    A const CF = CG;
    A const CG = CH;
    A const CH = CI;
    A const CI = CJ;
    A const CJ = CK;
    A const CK = CL;
    A const CL = CM;
    A const CM = CN;
    A const CN = CO;
    A const CO = CP;
    A const CP = CQ;
    A const CQ = CR;
    A const CR = CS;
    A const CS = CT;
    A const CT = CU;
    A const CU = CV;
    A const CV = CW;
    A const CW = CX;
    A const CX = CY;
    A const CY = CZ;
    A const CZ = DA;
    A const DA = DB;
    A const DB = DC;
    A const DC = DD;
    A const DD = DE;
    A const DE = DF;
    A const DF = DG;
    A const DG = DH;
    A const DH = DI;
    A const DI = DJ;
    A const DJ = DK;
    A const DK = DL;
    A const DL = DM;
    A const DM = DN;
    A const DN = DO;
    A const DO = DP;
    A const DP = DQ;
    A const DQ = DR;
    A const DR = DS;
    A const DS = DT;
    A const DT = DU;
    A const DU = DV;
    A const DV = DW;
    A const DW = DX;
    A const DX = DY;
    A const DY = DZ;
    A const DZ = EA;
    A const EA = EB;
    A const EB = EC;
    A const EC = ED;
    A const ED = EE;
    A const EE = EF;
    A const EF = EG;
    A const EG = EH;
    A const EH = EI;
    A const EI = EJ;
    A const EJ = EK;
    A const EK = EL;
    A const EL = EM;
    A const EM = EN;
    A const EN = EO;
    A const EO = EP;
    A const EP = EQ;
    A const EQ = ER;
    A const ER = ES;
    A const ES = ET;
    A const ET = EU;
    A const EU = EV;
    A const EV = EW;
    A const EW = EX;
    A const EX = EY;
    A const EY = EZ;
    A const EZ = FA;
    A const FA = FB;
    A const FB = FC;
    A const FC = FD;
    A const FD = FE;
    A const FE = FF;
    A const FF = FG;
    A const FG = FH;
    A const FH = FI;
    A const FI = FJ;
    A const FJ = FK;
    A const FK = FL;
    A const FL = FM;
    A const FM = FN;
    A const FN = FO;
    A const FO = FP;
    A const FP = FQ;
    A const FQ = FR;
    A const FR = FS;
    A const FS = FT;
    A const FT = FU;
    A const FU = FV;
    A const FV = FW;
    A const FW = FX;
    A const FX = FY;
    A const FY = FZ;
    A const FZ = GA;
    A const GA = GB;
    A const GB = GC;
    A const GC = GD;
    A const GD = GE;
    A const GE = GF;
    A const GF = GG;
    A const GG = GH;
    A const GH = GI;
    A const GI = GJ;
    A const GJ = GK;
    A const GK = GL;
    A const GL = GM;
    A const GM = GN;
    A const GN = GO;
    A const GO = GP;
    A const GP = GQ;
    A const GQ = GR;
    A const GR = GS;
    A const GS = GT;
    A const GT = GU;
    A const GU = GV;
    A const GV = GW;
    A const GW = GX;
    A const GX = GY;
    A const GY = GZ;
    A const GZ = HA;
    A const HA = HB;
    A const HB = HC;
    A const HC = HD;
    A const HD = HE;
    A const HE = HF;
    A const HF = HG;
    A const HG = HH;
    A const HH = HI;
    A const HI = HJ;
    A const HJ = HK;
    A const HK = HL;
    A const HL = HM;
    A const HM = HN;
    A const HN = HO;
    A const HO = HP;
    A const HP = HQ;
    A const HQ = HR;
    A const HR = HS;
    A const HS = HT;
    A const HT = HU;
    A const HU = HV;
    A const HV = HW;
    A const HW = HX;
    A const HX = HY;
    A const HY = HZ;
    A const HZ = IA;
    A const IA = IB;
    A const IB = IC;
    A const IC = ID;
    A const ID = IE;
    A const IE = IF;
    A const IF = IG;
    A const IG = IH;
    A const IH = II;
    A const II = IJ;
    A const IJ = IK;
    A const IK = IL;
    A const IL = IM;
    A const IM = IN;
    A const IN = IO;
    A const IO = IP;
    A const IP = IQ;
    A const IQ = IR;
    A const IR = IS;
    A const IS = IT;
    A const IT = IU;
    A const IU = IV;
    A const IV = IW;
    A const IW = IX;
    A const IX = IY;
    A const IY = IZ;
    A const IZ = JA;
    A const JA = JB;
    A const JB = JC;
    A const JC = JD;
    A const JD = JE;
    A const JE = JF;
    A const JF = JG;
    A const JG = JH;
    A const JH = JI;
    A const JI = JJ;
    A const JJ = JK;
    A const JK = JL;
    A const JL = JM;
    A const JM = JN;
    A const JN = JO;
    A const JO = JP;
    A const JP = JQ;
    A const JQ = JR;
    A const JR = JS;
    A const JS = JT;
    A const JT = JU;
    A const JU = JV;
    A const JV = JW;
    A const JW = JX;
    A const JX = A(0x00);
}
// ----
// DeclarationError: (6105-6123): Variable definition exhausting cyclic dependency validator.
